# Ai_travel

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  vercel.json
.github/: pull_request_template.md
agents/: README.md  catalog.yaml
agents/schemas/: README.md
api/: README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: README.md  coordinator.py
apps/api/app/api/v1/: README.md  journeys.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  trips.py
apps/api/app/services/: README.md  trips.py
apps/api/tests/: README.md  e2e_orchestration.py
apps/web/: .env.local.example  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/scripts/: test-trip-intent.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/[page]/: page.tsx
apps/web/src/app/api/geocode/: route.ts
apps/web/src/app/share/[slug]/: page.tsx
apps/web/src/components/: journey-globe.tsx  mission-control.tsx  travel-os.tsx  trip-canvas.tsx  workspace-page.tsx
apps/web/src/components/ui/: README.md
apps/web/src/lib/: README.md  trip-intent.ts  trips.ts
apps/web/src/styles/: globals.css
architecture/: system-design.md
architecture/decisions/: README.md
docs/: api-conventions.md  development.md  information-architecture.md  product-strategy.md  product-vision.md
prompts/: README.md
prompts/coordinator/: v1.md
prompts/evals/: README.md
supabase/: README.md
supabase/migrations/: 202607180001_create_trips.sql
