[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roamverse-api"
version = "0.1.0"
description = "Agent orchestration API for RoamVerse"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=1.65,<2.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic-settings>=2.7,<3.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.28", "ruff>=0.9"]

[tool.ruff]
line-length = 100
target-version = "py312"
